--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,26 @@
   left: 50%;
   transform: translateX(-50%);
 }
+.copyright-container {
+  transform: translateX(-50%);
+}
+.sliding-menu-container {
+  position: fixed;
+  width: 50%;
+  height: 100%;
+  top: 0px;
+  z-index: 19;
+  left: 0;
+  transition: left 0.2s ease;
+}
+.show-menu {
+  left: 0;
+}
+.hide-menu {
+  left: -9999px;
+}
+@media (max-width: 500px) {
+  .sliding-menu-container {
+    width: 100%;
+  }
+}
