--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@
   transition-timing-function: cubic-bezier(0.84, 0.12, 0.13, 0.82);
 }
 /* .cine-mix {
-  animation-delay: 0.65s;
+  animation-delay: 0.65s;;
 } */
 @keyframes word {
   0%,
