--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 .text-primary-light {
   color: #af8aff;
 }
@@ -27,15 +26,30 @@
   left: 50%;
   transform: translateX(-50%);
 }
+/* footer */
+.absolute-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.absolute-social {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
 .copyright-container {
-  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  height: 0px;
+
+  /* transform: translateX(-50%); */
 }
 .sliding-menu-container {
   position: fixed;
-  width: 50%;
+  width: 30%;
   height: 100%;
   top: 0px;
-  z-index: 19;
+  z-index: 99;
   left: 0;
   transition: left 0.2s ease;
 }
@@ -45,9 +59,12 @@
 .hide-menu {
   left: -9999px;
 }
+
 .pagination-container {
   display: flex;
-  z-index: 9999;
+  justify-content: flex-start;
+
+  z-index: 999;
   margin-top: 40px;
   padding: 0px;
   overflow-x: scroll;
@@ -143,9 +160,30 @@
     transform: translateX(5000px);
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .sliding-menu-container {
     width: 100%;
+  }
+  .display-none {
+    display: none;
+  }
+  .display-block {
+    display: block;
+  }
+  .theme-selector {
+    display: block;
+  }
+}
+@media (max-width: 700px) {
+  .form-control input {
+    width: 100%;
+    letter-spacing: 1px;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .form-control input {
+    font-size: 0.9rem;
   }
   .play-icon {
     top: 40%;
@@ -155,5 +193,16 @@
     top: 50%;
     left: 20%;
     font-size: 2.5rem;
+  }
+  .tabs {
+    display: flex;
+    justify-content: center;
+  }
+  .tab {
+    font-size: 0.6rem;
+    padding: 8px;
+  }
+  .copyright-container {
+    font-size: 0.7rem;
   }
 }
