--- a/src/index.css
+++ b/src/index.css
@@ -240,7 +240,7 @@
     letter-spacing: 1px;
     font-size: 1rem;
   }
-  .bottom-inner-movie-container {
+  .top-inner-movie-container {
     overflow-y: scroll;
   }
   .video-carousel {
@@ -281,6 +281,7 @@
   }
   .top-inner-movie-container {
     margin: 48px 0;
+    margin-top: 60px;
   }
   .bottom-inner-movie-container {
     padding: 0;
